They changed too much shit, should fix everything but middle video tho, going to move video up as well

--- a/dubtrack/chat/left.css
+++ b/dubtrack/chat/left.css
@@ -4,13 +4,11 @@
   left: 0;
   margin-right: 0px !important;
   float: left !important;
-  height: calc(100vh - 4.9em);
   width: 400px !important;
 }
 #main-room:not(.fullscreenParent) .left_section {
-  margin-left: 400px;
+  margin-left: 405px;
 }
 #main-room:not(.fullscreenParent) #chat .chat-tools .room-user-counter { padding-top: .75em !important; }
 #main-room:not(.fullscreenParent) #chat .chat-container .chat-messages { height: inherit !important; }
 #main-room:not(.fullscreenParent) #chat .chat-container, #chat { height: 100%; }
-#main-room:not(.fullscreenParent) #chat .chat-container ul.chat-main li .activity-row { width: calc(20.5em - 40px); }
